Add VS Code setup instructions to readme
Added setup instructions for running the project in VS Code, including requirements and configuration files.